# ChatServer-based-on-NginxTcpLoadBalance-RedisPubSub

./: CMakeLists.txt  README.md  autobuild.sh
include/: publish.h
include/server/: ChatServer.h  ChatService.h  public.h
include/server/db/: MySQL.h
include/server/model/: FriendModel.h  Group.hpp  GroupModel.h  GroupUser.h  OfflineMsgModel.h  User.hpp  UserModel.h
include/server/redis/: redis.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: MySQL.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMsgModel.cpp  UserModel.cpp
src/server/redis/: redis.cpp
